clean up Epi102

--- a/Epidemiology102.ipynb
+++ b/Epidemiology102.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scipy     1.4.1\n",
       "json      2.0.9\n",
-      "autopep8  1.5\n",
-      "numpy     1.18.1\n",
-      "pandas    1.0.1\n",
-      "networkx  2.4\n",
       "watermark 2.0.2\n",
-      "Sun Apr 05 2020 \n",
+      "numpy     1.18.1\n",
+      "networkx  2.4\n",
+      "scipy     1.4.1\n",
+      "pandas    1.0.1\n",
+      "autopep8  1.5\n",
+      "Sat Apr 25 2020 \n",
       "\n",
       "CPython 3.7.3\n",
       "IPython 6.2.1\n",
@@ -71,7 +71,7 @@
       "processor  : i386\n",
       "CPU cores  : 8\n",
       "interpreter: 64bit\n",
-      "Git hash   : 81bf99eec189d47a8ca9f62ba1ff0ce904784216\n"
+      "Git hash   : 98d2c80f38539bac4ac81fc25a8c3e44ef9c20b4\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1221cbb00>"
+       "<matplotlib.legend.Legend at 0x110d230f0>"
       ]
      },
      "execution_count": 8,
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,16 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12da2e9b0>"
+       "<matplotlib.legend.Legend at 0x135484048>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -340,16 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x105c86f60>"
+       "<matplotlib.legend.Legend at 0x135473cf8>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -391,11 +391,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "There have been recent reports that immunity might not be permanent for those who recover from the infection. We can easily add this feature to our model by including an extra transition from the *Recovered* compartment back to *Susceptible*"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,8 +411,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Naturally, the time scale of the system depend on the exact value of $\\rho$ chosen, but the main features will remain the same. Our model is now:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -432,26 +441,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "SEIRS.integrate(365, S=N-I0, E=0, I=I0, R=0)"
+    "Let's integrate the equations of the model and examine the result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x13c9fdfd0>"
+       "<matplotlib.legend.Legend at 0x13c3e8c88>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -469,6 +476,8 @@
     }
    ],
    "source": [
+    "SEIRS.integrate(365, S=N-I0, E=0, I=I0, R=0)\n",
+    "\n",
     "ax = SEIRS.plot(normed=True, color=[colors[0], colors[4], colors[1], colors[2]])\n",
     "ax.legend(['Susceptible', 'Exposed', 'Infectious', 'Recovered'])"
    ]
@@ -572,6 +581,11 @@
    "source": [
     "## Asymptomatic cases"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
