added patient post link

--- a/Epidemiology002.ipynb
+++ b/Epidemiology002.ipynb
@@ -63,11 +63,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pandas    1.0.1\n",
       "wget      3.2\n",
+      "numpy     1.18.1\n",
+      "pandas    1.0.1\n",
       "autopep8  1.5\n",
       "watermark 2.0.2\n",
-      "numpy     1.18.1\n",
       "json      2.0.9\n",
       "Sun Jun 14 2020 \n",
       "\n",
@@ -81,7 +81,7 @@
       "processor  : i386\n",
       "CPU cores  : 8\n",
       "interpreter: 64bit\n",
-      "Git hash   : 8f3de1773cbcd0ebcb3b2c037546e68cdd686f9b\n"
+      "Git hash   : 64ada7d861f78ad188a3f71989df73725e78236b\n"
      ]
     }
    ],
@@ -295,6 +295,26 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(144, 2)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country_counts.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "country_age_counts = pd.DataFrame(Counter(data[['country', 'age']].dropna()['country']).items(), columns=['Country', 'Age_Count'])\n",
@@ -303,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -382,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,18 +414,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And clean up the dataset to keep only the instances where confirmation occurs after symptom onset"
+    "Let's keep only patients for which we have complete information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dates = data.dropna()\n",
-    "dates = dates[dates['date_confirmation'] > dates['date_onset_symptoms']].copy()\n",
-    "dates['count'] = 1"
+    "dates = data[['country', 'age', 'sex', 'date_onset_symptoms', 'date_confirmation']].dropna()"
    ]
   },
   {
@@ -417,16 +435,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(136141, 10)"
+       "(201631, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,12 +457,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "And after we remove all the patients with symptoms happening only after test confirmation, we are down to 6% of the original"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(136141, 6)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dates = dates[dates['date_confirmation'] > dates['date_onset_symptoms']].copy()\n",
+    "dates['count'] = 1\n",
+    "dates.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "With a significantly biased distribution across countries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +582,7 @@
        "Australia        40"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +660,7 @@
        "Text(0, 0.5, 'Case Confirmation')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -663,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,33 +744,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>sex</th>\n",
+       "      <th>female</th>\n",
+       "      <th>male</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age_group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>00-04</th>\n",
+       "      <td>459</td>\n",
+       "      <td>460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>05-14</th>\n",
+       "      <td>1095</td>\n",
+       "      <td>1070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-34</th>\n",
+       "      <td>14911</td>\n",
+       "      <td>13364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-59</th>\n",
+       "      <td>25832</td>\n",
+       "      <td>23168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60-79</th>\n",
+       "      <td>9818</td>\n",
+       "      <td>11037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80+</th>\n",
+       "      <td>5633</td>\n",
+       "      <td>3913</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "00-04      919\n",
-       "05-14     2165\n",
-       "15-34    28275\n",
-       "35-59    49000\n",
-       "60-79    20855\n",
-       "80+       9546\n",
-       "Name: age_group, dtype: int64"
+       "sex        female   male\n",
+       "age_group               \n",
+       "00-04         459    460\n",
+       "05-14        1095   1070\n",
+       "15-34       14911  13364\n",
+       "35-59       25832  23168\n",
+       "60-79        9818  11037\n",
+       "80+          5633   3913"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "germany['age_group'].value_counts().sort_index()"
+    "pd.pivot_table(germany[['age_group', 'sex', 'count']], index='age_group', columns='sex', values='count', aggfunc='sum')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,17 +853,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "germany_counts = germany_clean[['age_group', 'sex', 'delta', 'counts']]\\\n",
-    ".groupby(['age_group', 'sex', 'delta'], as_index=False).sum()"
+    "germany_counts = germany_clean[['age_group', 'sex', 'delta', 'counts']].groupby(['age_group', 'sex', 'delta'], as_index=False).sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -801,8 +911,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the changes across age groups and genders are minimal, we calculate the total distribution in order to have better statistics. This has the added advantage of allowing us to apply this approach to countries for which we don't have age information"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,137 +928,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>delta</th>\n",
-       "      <th>counts</th>\n",
-       "      <th>delay</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1 days</td>\n",
-       "      <td>6850</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2 days</td>\n",
-       "      <td>11273</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3 days</td>\n",
-       "      <td>12666</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4 days</td>\n",
-       "      <td>12163</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5 days</td>\n",
-       "      <td>11404</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>91 days</td>\n",
-       "      <td>1</td>\n",
-       "      <td>91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>93 days</td>\n",
-       "      <td>1</td>\n",
-       "      <td>93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>95 days</td>\n",
-       "      <td>1</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>104 days</td>\n",
-       "      <td>1</td>\n",
-       "      <td>104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>105 days</td>\n",
-       "      <td>1</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>85 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      delta  counts  delay\n",
-       "0    1 days    6850      1\n",
-       "1    2 days   11273      2\n",
-       "2    3 days   12666      3\n",
-       "3    4 days   12163      4\n",
-       "4    5 days   11404      5\n",
-       "..      ...     ...    ...\n",
-       "80  91 days       1     91\n",
-       "81  93 days       1     93\n",
-       "82  95 days       1     95\n",
-       "83 104 days       1    104\n",
-       "84 105 days       1    105\n",
-       "\n",
-       "[85 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "germany_mean"
+    "And now we calculate the distribution of delays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -990,19 +985,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspired by https://github.com/k-sys/covid-19"
+    "Now that we have the distribution of delay times between symptom onset and case confirmation, we can use it to estimate the temporal evolution of symptom onsets for Germany. Inspired by https://github.com/k-sys/covid-19"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the official number of confirmed cases form the JHU dataset"
+    "Get the official number of confirmed cases form the JHU dataset. You can take a deeper look at how to analyze this dataset in the [Epidemiology001](Epidemiology001.ipynb) notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,12 +1048,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convolve the number of confirmed cases with the empirical delay probabilities. We invert the confirmed values in order to convolve into the past"
+    "We estimate the distribution of onset dates by distributing all the cases confirmed today across all previous days according to the delay distribution. Mathematically, this can be calculated as a [convolution](https://en.wikipedia.org/wiki/Convolution) between the number of cases and the delay distribution. A more precise approach would use a multinomial distibution to assign each confirmed case to a onset date, but if the numbers of cases are sufficiently large the difference will be small. Here we invert the temporal order of the confirmed values in order to convolve cases into the past."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,12 +1064,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Manually calculate the new index dates"
+    "As we now have (potentially) extended furth back in the  past than our original time period, we have to manually calculate the new index dates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,21 +1081,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare the results"
+    "And finally, we can compare the timelines of case confirmation and symptom onsets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb7dea4ea58>"
+       "<matplotlib.legend.Legend at 0x7fe8b69a3fd0>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1123,6 +1118,13 @@
     "ax.set_xlabel('Date')\n",
     "ax.set_ylabel('Cases')\n",
     "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, by using this approach we obtained a much cleaner timeline for the epidemic in Germany. As the time delay distribution is infered empirically, it is even able to remove the circadian variations between weekdays and weekends."
    ]
   },
   {
