--- a/Epidemiology102.ipynb
+++ b/Epidemiology102.ipynb
@@ -25,6 +25,8 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "import matplotlib as mpl \n",
     "import matplotlib.pyplot as plt \n",
     "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "\n",
@@ -55,26 +57,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "watermark 2.0.2\n",
-      "scipy     1.4.1\n",
-      "networkx  2.4\n",
-      "numpy     1.18.1\n",
-      "autopep8  1.5\n",
-      "pandas    1.0.1\n",
-      "json      2.0.9\n",
-      "Sun May 10 2020 \n",
+      "networkx   2.4\n",
+      "matplotlib 3.1.3\n",
+      "pandas     1.0.1\n",
+      "autopep8   1.5\n",
+      "scipy      1.4.1\n",
+      "json       2.0.9\n",
+      "watermark  2.0.2\n",
+      "numpy      1.18.1\n",
+      "Sun Aug 02 2020 \n",
       "\n",
       "CPython 3.7.3\n",
       "IPython 6.2.1\n",
       "\n",
       "compiler   : Clang 4.0.1 (tags/RELEASE_401/final)\n",
       "system     : Darwin\n",
-      "release    : 19.4.0\n",
+      "release    : 19.5.0\n",
       "machine    : x86_64\n",
       "processor  : i386\n",
       "CPU cores  : 8\n",
       "interpreter: 64bit\n",
-      "Git hash   : 8e8530b791895e1d5f125b747f00dd0f6c23abbd\n"
+      "Git hash   : 42369cd235af823a58f7ee56878b782a1d04c306\n"
      ]
     }
    ],
@@ -190,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x103272e10>"
+       "<matplotlib.legend.Legend at 0x7fcd2e8ce6a0>"
       ]
      },
      "execution_count": 7,
@@ -311,7 +314,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x127bc2710>"
+       "<matplotlib.legend.Legend at 0x7fcd34591ac8>"
       ]
      },
      "execution_count": 11,
@@ -351,7 +354,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x102795f60>"
+       "<matplotlib.legend.Legend at 0x7fcd2c53e6a0>"
       ]
      },
      "execution_count": 12,
@@ -460,7 +463,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10279f390>"
+       "<matplotlib.legend.Legend at 0x7fcd2c5bc588>"
       ]
      },
      "execution_count": 15,
@@ -519,7 +522,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x130ac05c0>"
+       "<matplotlib.legend.Legend at 0x7fcd190644a8>"
       ]
      },
      "execution_count": 18,
@@ -872,7 +875,7 @@
     "\n",
     "ax.legend()\n",
     "ax.set_xlabel('Time')\n",
-    "ax.set_ylabel('Population')"
+    "ax.set_ylab≥¿\n"
    ]
   },
   {
