clean up notebook

--- a/Epidemiology003.ipynb
+++ b/Epidemiology003.ipynb
@@ -53,10 +53,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pandas     1.1.3\n",
-      "matplotlib 3.3.2\n",
       "numpy      1.19.2\n",
+      "pandas     1.1.3\n",
       "watermark  2.0.2\n",
+      "matplotlib 3.3.2\n",
       "Sat Nov 21 2020 \n",
       "\n",
       "CPython 3.8.5\n",
@@ -69,7 +69,7 @@
       "processor  : i386\n",
       "CPU cores  : 8\n",
       "interpreter: 64bit\n",
-      "Git hash   : 0ca87409313921d755d06f4c38759388cd736f1f\n"
+      "Git hash   : 7b252dffbe62663144c433a3bbb87ab7f9eb3593\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "Text(0, 0.5, 'Positive Tests (%)')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,17 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "confirmed_mean = confirmed_mean[states.name.values]\n",
-    "deaths_mean = deaths_mean[states.name.values]"
+    "confirmed_mean = confirmed_mean[states.name.values]['2020-04-01':]\n",
+    "deaths_mean = deaths_mean[states.name.values]['2020-04-01':]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
     "    ax.axvline(x=max_lag, color=colors[1], linestyle=':')\n",
     "    ax.set_xlabel('Lag (days)')\n",
     "    ax.set_ylabel('Correlation')\n",
-    "    yval = (mean_correlations.mean())#+(mean_correlations.max()-mean_correlations.min())*0.30)\n",
+    "    yval = mean_correlations.mean()\n",
     "    ax.text(x=max_lag+0.5, y=yval, s='Maximum')\n",
     "    \n",
     "    return max_lag"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "Text(2020-05-02, 1.7165827241647282, 'mean=1.68%')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "Text(0, 0.5, 'Daily Deaths')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "301313.80977447657"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
