--- a/Epidemiology201.ipynb
+++ b/Epidemiology201.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div style=\"width: 100%; overflow: hidden;\">\n",
-    "    <div style=\"width: 150px; float: left;\"> <img src=\"data/D4Sci_logo_ball.png\" alt=\"Data For Science, Inc\" align=\"left\" border=\"0\"> </div>\n",
+    "    <div style=\"width: 150px; float: left;\"> <img src=\"data/D4Sci_logo_ball.png\" alt=\"Data For Science, Inc\" align=\"left\" border=\"0\" width=160px> </div>\n",
     "    <div style=\"float: left; margin-left: 10px;\"> <h1>Epidemiology 201</h1>\n",
     "<h1>Social Networks</h1>\n",
     "        <p>Bruno Gonçalves<br/>\n",
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/bgoncalves/anaconda3/lib/python3.7/site-packages/tqdm/std.py:668: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
+      "/Users/bgoncalves/opt/anaconda3/lib/python3.8/site-packages/tqdm/std.py:697: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
       "  from pandas import Panel\n"
      ]
     }
@@ -64,27 +64,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "matplotlib 3.1.3\n",
-      "autopep8   1.5\n",
-      "watermark  2.0.2\n",
-      "pandas     1.0.1\n",
-      "scipy      1.4.1\n",
-      "numpy      1.18.1\n",
-      "json       2.0.9\n",
-      "networkx   2.4\n",
-      "Sun Aug 02 2020 \n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.5\n",
+      "IPython version      : 7.19.0\n",
       "\n",
-      "CPython 3.7.3\n",
-      "IPython 6.2.1\n",
+      "Compiler    : Clang 10.0.0 \n",
+      "OS          : Darwin\n",
+      "Release     : 20.5.0\n",
+      "Machine     : x86_64\n",
+      "Processor   : i386\n",
+      "CPU cores   : 16\n",
+      "Architecture: 64bit\n",
       "\n",
-      "compiler   : Clang 4.0.1 (tags/RELEASE_401/final)\n",
-      "system     : Darwin\n",
-      "release    : 19.5.0\n",
-      "machine    : x86_64\n",
-      "processor  : i386\n",
-      "CPU cores  : 8\n",
-      "interpreter: 64bit\n",
-      "Git hash   : 42369cd235af823a58f7ee56878b782a1d04c306\n"
+      "Git hash: 273d6ba33f49ff5ad7e4aea2217b9517d0272c93\n",
+      "\n",
+      "networkx  : 2.5\n",
+      "json      : 2.0.9\n",
+      "numpy     : 1.19.2\n",
+      "watermark : 2.1.0\n",
+      "pandas    : 1.1.3\n",
+      "matplotlib: 3.3.2\n",
+      "scipy     : 1.6.1\n",
+      "\n"
      ]
     }
    ],
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
        "5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
        "[4, 6]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +417,7 @@
        "[4, 8, 5, 0, 9]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +457,7 @@
        "[4, 8, 5, 0, 9]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +477,7 @@
        "{0, 2, 3, 4, 5, 6, 7, 8, 9}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
