--- a/Epidemiology105.ipynb
+++ b/Epidemiology105.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div style=\"width: 100%; overflow: hidden;\">\n",
-    "    <div style=\"width: 150px; float: left;\"> <img src=\"data/D4Sci_logo_ball.png\" alt=\"Data For Science, Inc\" align=\"left\" border=\"0\"> </div>\n",
+    "    <div style=\"width: 150px; float: left;\"> <img src=\"data/D4Sci_logo_ball.png\" alt=\"Data For Science, Inc\" align=\"left\" border=\"0\" width=160px> </div>\n",
     "    <div style=\"float: left; margin-left: 10px;\"> <h1>Epidemiology 105</h1>\n",
     "<h1>The Impact of Competing Strains</h1>\n",
     "        <p>Bruno Gonçalves<br/>\n",
@@ -69,22 +69,22 @@
       "\n",
       "Compiler    : Clang 10.0.0 \n",
       "OS          : Darwin\n",
-      "Release     : 20.2.0\n",
+      "Release     : 20.5.0\n",
       "Machine     : x86_64\n",
       "Processor   : i386\n",
       "CPU cores   : 16\n",
       "Architecture: 64bit\n",
       "\n",
-      "Git hash: 6809af2fe13634666b531b60015f62e533961af3\n",
+      "Git hash: 273d6ba33f49ff5ad7e4aea2217b9517d0272c93\n",
       "\n",
       "networkx  : 2.5\n",
       "pandas    : 1.1.3\n",
       "json      : 2.0.9\n",
-      "scipy     : 1.5.2\n",
-      "cartopy   : 0.17.0\n",
+      "cartopy   : 0.18.0\n",
       "matplotlib: 3.3.2\n",
       "numpy     : 1.19.2\n",
       "watermark : 2.1.0\n",
+      "scipy     : 1.6.1\n",
       "\n"
      ]
     }
@@ -556,7 +556,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7fdf21770bb0>"
+       "<matplotlib.lines.Line2D at 0x7f880066a8b0>"
       ]
      },
      "execution_count": 22,
