--- a/Epidemiology201.ipynb
+++ b/Epidemiology201.ipynb
@@ -18,16 +18,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/bgoncalves/opt/anaconda3/lib/python3.8/site-packages/tqdm/std.py:697: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
-      "  from pandas import Panel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "from pprint import pprint\n",
@@ -42,7 +33,8 @@
     "\n",
     "import watermark\n",
     "\n",
-    "from NetworkEpiModel import *\n",
+    "import epidemik\n",
+    "from epidemik import NetworkEpiModel\n",
     "\n",
     "%load_ext watermark\n",
     "%matplotlib inline"
@@ -65,26 +57,25 @@
      "output_type": "stream",
      "text": [
       "Python implementation: CPython\n",
-      "Python version       : 3.8.5\n",
-      "IPython version      : 7.19.0\n",
+      "Python version       : 3.11.7\n",
+      "IPython version      : 8.12.3\n",
       "\n",
-      "Compiler    : Clang 10.0.0 \n",
+      "Compiler    : Clang 14.0.6 \n",
       "OS          : Darwin\n",
-      "Release     : 20.5.0\n",
-      "Machine     : x86_64\n",
-      "Processor   : i386\n",
+      "Release     : 23.4.0\n",
+      "Machine     : arm64\n",
+      "Processor   : arm\n",
       "CPU cores   : 16\n",
       "Architecture: 64bit\n",
       "\n",
-      "Git hash: 273d6ba33f49ff5ad7e4aea2217b9517d0272c93\n",
+      "Git hash: 6f3f47aa98b5141fcddbadd07afeedaa91c4cfb7\n",
       "\n",
-      "networkx  : 2.5\n",
-      "json      : 2.0.9\n",
-      "numpy     : 1.19.2\n",
-      "watermark : 2.1.0\n",
-      "pandas    : 1.1.3\n",
-      "matplotlib: 3.3.2\n",
-      "scipy     : 1.6.1\n",
+      "numpy     : 1.26.4\n",
+      "watermark : 2.4.3\n",
+      "epidemik  : 0.0.6\n",
+      "pandas    : 2.1.4\n",
+      "networkx  : 3.1\n",
+      "matplotlib: 3.8.0\n",
       "\n"
      ]
     }
@@ -497,17 +488,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "<div style=\"width: 100%; overflow: hidden;\">\n",
+    "<center>\n",
     "     <img src=\"data/D4Sci_logo_full.png\" alt=\"Data For Science, Inc\" align=\"center\" border=\"0\" width=300px> \n",
-    "</div>"
+    "</center>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -521,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -567,5 +556,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
